objects/EMP_Immigration_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Abstract_Form_Id__c</fullName>
        <label>Abstract Form Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <label>Employee Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Immigration_Home_Page__c</fullName>
        <label>Immigration Home Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EMP Immigration Settings</label>
</CustomObject>